2013-05-30  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_tinfo.cc: fixed segfault when there is no TERM env var.
	* buffer_zlib.cc: fixed compilation with older zlib.

2013-05-28  Alexander V. Lukyanov <lav@yars.free.net>

	* buffer_zlib.cc, buffer_zlib.h: implement inflator.
	* Http.cc, Http.h: add support for gzip Content-Encoding.
	* Makefile.am: buffer_zlib for proto-http.
	* buffer.cc, buffer.h: (SetTranslator) translate unread data.
	* buffer.h: (IsFull) new method.
	* FileCopy.cc, FileCopy.h: (FileCopyPeerMemory) new peer type;
	  use IOBuffer::SetMaxBuffered and IsFull.
	* Torrent.cc, Torrent.h: use FileCopy for metainfo fetching.

2013-05-27  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc: (SFtpListInfo::Do) fixed return value (prevents an endless loop).
	* FileCopy.cc: init date member; clean up date/size requesting in FileCopyPeerFA.

2013-05-21  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc: set size=NO_SIZE when the size could not be found.
	* FileSet.cc: allow info merging for files with the same basename.
	* Fish.cc: fixed file correption and garbage logging by requiring
	  the file to have a size; improve error handling.

2013-05-20  Alexander V. Lukyanov <lav@yars.free.net>

	* Fish.cc: disconnect in more cases on Close.

2013-05-13  Alexander V. Lukyanov <lav@yars.free.net>

	* TorrentTracker.cc, TorrentTracker.h: use xstring for InfoHash and
	  PeerId.

2013-05-07  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc: fixed NULL dereference when use-dht is off.

2013-04-18  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc, Http.h: improve DirFile; add slash for directories in ARRAY_INFO.
	* FileAccess.cc, FileAccess.h, FileCopy.cc, FileCopy.h, FileSet.cc,
	  FileSet.h, Fish.cc, GetFileInfo.cc, GetFileInfo.h, Http.cc,
	  LocalAccess.cc, NetAccess.cc, NetAccess.h, SFtp.cc, SFtp.h,
	  ftpclass.cc: use FileSet for ARRAY_INFO; add READLINK support in sftp.

2013-04-12  Alexander V. Lukyanov <lav@yars.free.net>
