@@ -1,3 +1,7 @@
+2013-07-04  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* FileSet.cc: recognize and ignore human readable sizes.
+
 2013-05-30  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* lftp_tinfo.cc: fixed segfault when there is no TERM env var.
